--- a/tp-admin-master/app/www/view/newwinners/index.html
+++ b/tp-admin-master/app/www/view/newwinners/index.html
@@ -49,145 +49,15 @@
     </div>
     <ul data-v-5fcada3b="">
       <span data-v-5fcada3b="">
-      <li data-v-5fcada3b="" data-thisid="533017" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/0A472675E5E5AF50.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">理</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥14.04</em></div>
-          </div>
-      </li>
-      <li data-v-5fcada3b="" data-thisid="527827" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/C6021F3486D2B2DB.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">赢顶</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥162.5</em></div>
-          </div>
-      </li>
-      <li data-v-5fcada3b="" data-thisid="709101" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/E6CA6EB9F492879E.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">li***7</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥6.53</em></div>
-          </div>
-      </li>
-      <li data-v-5fcada3b="" data-thisid="397184" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/4D73D09EC5D7BFE3.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">波哥</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥0.31</em></div>
-          </div>
-      </li>
-      <li data-v-5fcada3b="" data-thisid="580829" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/1EF6FC3ACCBCD762.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">47***4</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥130.67</em></div>
-          </div>
-      </li>
-      <li data-v-5fcada3b="" data-thisid="875323" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/5C5A53823438F2CD.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">东少</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥238</em></div>
-          </div>
-      </li>
-      <li data-v-5fcada3b="" data-thisid="867263" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/5C5A53823438F2CD.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">wo***n</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥28.68</em></div>
-          </div>
-      </li>
-      <li data-v-5fcada3b="" data-thisid="359188" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/4D73D09EC5D7BFE3.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">dc***3</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥7448</em></div>
-          </div>
-      </li>
-      <li data-v-5fcada3b="" data-thisid="666460" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/C707188A6E10AED4.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">ai***6</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥14.34</em></div>
-          </div>
-      </li>
-      <li data-v-5fcada3b="" data-thisid="397010" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/5C5A53823438F2CD.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">好贪</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥64.33</em></div>
-          </div>
-      </li>
-      <li data-v-5fcada3b="" data-thisid="166873" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/A9734CC321C8B363.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">连中</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥57.12</em></div>
-          </div>
-      </li>
-      <li data-v-5fcada3b="" data-thisid="110258" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/E6CA6EB9F492879E.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">aa***3</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥588</em></div>
-          </div>
-      </li>
-      <li data-v-5fcada3b="" data-thisid="166873" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/A9734CC321C8B363.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">连中</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥714</em></div>
-          </div>
-      </li>
-      </span>
-      <li data-v-5fcada3b="" data-thisid="1121544" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/9816F54B27A9BF48.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">12***5</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥19.6</em></div>
-          </div>
-      </li>
-      <li data-v-5fcada3b="" data-thisid="738433" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/1B6A214FF62BD91F.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">aa***k</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥1.96</em></div>
-          </div>
-      </li>
-      <li data-v-5fcada3b="" data-thisid="824982" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/EF01C8BED7B70053.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">邓小红</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥1.96</em></div>
-          </div>
-      </li>
-      <li data-v-5fcada3b="" data-thisid="777879" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/C7BB5088540C8040.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">lj***6</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥19</em></div>
-          </div>
-      </li>
-      <li data-v-5fcada3b="" data-thisid="1124975" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/73ad0d4d5aa8c974.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">细水长流</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥360</em></div>
-          </div>
-      </li>
-      <li data-v-5fcada3b="" data-thisid="1124174" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/367498B6A748D910.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">hi***9</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥28.8</em></div>
-          </div>
-      </li>
-      <li data-v-5fcada3b="" data-thisid="1124232" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/EF01C8BED7B70053.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">18***9</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥5.4</em></div>
-          </div>
-      </li>
-      <li data-v-5fcada3b="" data-thisid="244169" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/9A9C9E1A719CE536.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">她不懂</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥156.48</em></div>
-          </div>
-      </li>
-      <li data-v-5fcada3b="" data-thisid="244169" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/9A9C9E1A719CE536.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">她不懂</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥156.48</em></div>
-          </div>
-      </li>
-      <li data-v-5fcada3b="" data-thisid="244169" class="active">
-        <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/9A9C9E1A719CE536.jpg" alt=""></a>
-          <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">她不懂</a> <span data-v-5fcada3b="">在大发时时彩<br data-v-5fcada3b="">
-            喜中</span><em data-v-5fcada3b="">￥156.48</em></div>
-          </div>
-      </li>
+          {volist name="data" id="vo"}
+            <li data-v-5fcada3b="" data-thisid="533017" class="active">
+              <div data-v-5fcada3b=""><a data-v-5fcada3b="" href="javascript:;" class="headImg"><img data-v-5fcada3b="" src="http://imagess-google.com/system/common/headimg/0A472675E5E5AF50.jpg" alt=""></a>
+                <div data-v-5fcada3b="" class="right"><a data-v-5fcada3b="" href="javascript:;" style="color:#38f">{$vo.username}</a> <span data-v-5fcada3b="">在{$vo.lotteryname}<br data-v-5fcada3b="">
+                  喜中</span><em data-v-5fcada3b="">￥{$vo.winningmoney}</em></div>
+                </div>
+            </li>
+       {/volist}      
+      </span>     
     </ul>
   </div>
 </div>
