昨日奖金榜

--- a/tp-admin-master/app/www/view/newwinners/competition.html
+++ b/tp-admin-master/app/www/view/newwinners/competition.html
@@ -46,66 +46,15 @@
     </a></nav>
   <div data-v-92fab130="" class="competition" s="[object Object]">
     <table data-v-92fab130="">
+        {volist name="data" id="vo"}
       <tr data-v-92fab130="" data-id="1051592" class="active">
         <td data-v-92fab130=""><img data-v-92fab130="" src="http://imagess-google.com/system/common/headimg/CA64E00C3F9FD5F3.jpg" alt="">
-          <p data-v-92fab130="">账号昵称：<i data-v-92fab130="" style="color:#38f">zy***7</i><br data-v-92fab130="">
-            昨日奖金：<span data-v-92fab130="">￥3405693</span></p></td>
-        <td data-v-92fab130=""><em data-v-92fab130="">1</em></td>
+          <p data-v-92fab130="">账号：<i data-v-92fab130="" style="color:#38f">{$vo.username}</i><br data-v-92fab130="">
+            昨日奖金：<span data-v-92fab130="">￥{$vo.allwinningmoney}</span></p></td>
+        <td data-v-92fab130=""><em data-v-92fab130="">{$vo.ranking}</em></td>
       </tr>
-      <tr data-v-92fab130="" data-id="867845" class="active">
-        <td data-v-92fab130=""><img data-v-92fab130="" src="http://imagess-google.com/system/common/headimg/E6CA6EB9F492879E.jpg" alt="">
-          <p data-v-92fab130="">账号昵称：<i data-v-92fab130="" style="color:#38f">刘耀强</i><br data-v-92fab130="">
-            昨日奖金：<span data-v-92fab130="">￥2884945</span></p></td>
-        <td data-v-92fab130=""><em data-v-92fab130="">2</em></td>
-      </tr>
-      <tr data-v-92fab130="" data-id="904325" class="active">
-        <td data-v-92fab130=""><img data-v-92fab130="" src="http://imagess-google.com/system/common/headimg/9A9C9E1A719CE536.jpg" alt="">
-          <p data-v-92fab130="">账号昵称：<i data-v-92fab130="" style="color:#38f">hu***1</i><br data-v-92fab130="">
-            昨日奖金：<span data-v-92fab130="">￥2516361</span></p></td>
-        <td data-v-92fab130=""><em data-v-92fab130="">3</em></td>
-      </tr>
-      <tr data-v-92fab130="" data-id="943631" class="active">
-        <td data-v-92fab130=""><img data-v-92fab130="" src="http://imagess-google.com/system/common/headimg/3578E1EB410B49C7.jpg" alt="">
-          <p data-v-92fab130="">账号昵称：<i data-v-92fab130="" style="color:#38f">15***8</i><br data-v-92fab130="">
-            昨日奖金：<span data-v-92fab130="">￥2471063</span></p></td>
-        <td data-v-92fab130=""><em data-v-92fab130="">4</em></td>
-      </tr>
-      <tr data-v-92fab130="" data-id="633147" class="active">
-        <td data-v-92fab130=""><img data-v-92fab130="" src="http://imagess-google.com/system/common/headimg/6F1A99A3D02A6DEC.jpg" alt="">
-          <p data-v-92fab130="">账号昵称：<i data-v-92fab130="" style="color:#38f">独自在家</i><br data-v-92fab130="">
-            昨日奖金：<span data-v-92fab130="">￥2324111</span></p></td>
-        <td data-v-92fab130=""><em data-v-92fab130="">5</em></td>
-      </tr>
-      <tr data-v-92fab130="" data-id="345354" class="active">
-        <td data-v-92fab130=""><img data-v-92fab130="" src="http://imagess-google.com/system/common/headimg/C707188A6E10AED4.jpg" alt="">
-          <p data-v-92fab130="">账号昵称：<i data-v-92fab130="" style="color:#38f">苑苑</i><br data-v-92fab130="">
-            昨日奖金：<span data-v-92fab130="">￥2184835</span></p></td>
-        <td data-v-92fab130=""><em data-v-92fab130="">6</em></td>
-      </tr>
-      <tr data-v-92fab130="" data-id="513210" class="active">
-        <td data-v-92fab130=""><img data-v-92fab130="" src="http://imagess-google.com/system/common/headimg/9A9C9E1A719CE536.jpg" alt="">
-          <p data-v-92fab130="">账号昵称：<i data-v-92fab130="" style="color:#38f">z2***9</i><br data-v-92fab130="">
-            昨日奖金：<span data-v-92fab130="">￥1802846</span></p></td>
-        <td data-v-92fab130=""><em data-v-92fab130="">7</em></td>
-      </tr>
-      <tr data-v-92fab130="" data-id="632524" class="active">
-        <td data-v-92fab130=""><img data-v-92fab130="" src="http://imagess-google.com/system/common/headimg/5C5A53823438F2CD.jpg" alt="">
-          <p data-v-92fab130="">账号昵称：<i data-v-92fab130="" style="color:#38f">目标赢千万</i><br data-v-92fab130="">
-            昨日奖金：<span data-v-92fab130="">￥1261917</span></p></td>
-        <td data-v-92fab130=""><em data-v-92fab130="">8</em></td>
-      </tr>
-      <tr data-v-92fab130="" data-id="1112005" class="active">
-        <td data-v-92fab130=""><img data-v-92fab130="" src="http://imagess-google.com/system/common/headimg/1EF6FC3ACCBCD762.jpg" alt="">
-          <p data-v-92fab130="">账号昵称：<i data-v-92fab130="" style="color:#38f">榜上有名</i><br data-v-92fab130="">
-            昨日奖金：<span data-v-92fab130="">￥1097690</span></p></td>
-        <td data-v-92fab130=""><em data-v-92fab130="">9</em></td>
-      </tr>
-      <tr data-v-92fab130="" data-id="924902" class="active">
-        <td data-v-92fab130=""><img data-v-92fab130="" src="http://imagess-google.com/system/common/headimg/9816F54B27A9BF48.jpg" alt="">
-          <p data-v-92fab130="">账号昵称：<i data-v-92fab130="" style="color:#38f">su***9</i><br data-v-92fab130="">
-            昨日奖金：<span data-v-92fab130="">￥1001900</span></p></td>
-        <td data-v-92fab130=""><em data-v-92fab130="">10</em></td>
-      </tr>
+      {/volist}  
+   
     </table>
   </div>
 </div>
