修改个人信息

--- a/tp-admin-master/app/www/view/usercenter/personalinfo.html
+++ b/tp-admin-master/app/www/view/usercenter/personalinfo.html
@@ -77,7 +77,7 @@
       </li>
       <li data-v-df275b96="">
         <div data-v-df275b96=""><span data-v-df275b96="">生日</span> <i data-v-df275b96="" class="iconfont right"></i> <em data-v-df275b96="">
-          <input data-v-df275b96="" tag="生日" va-para="BirthDay" type="date" class="va131" name="BirthDay" >
+          <input data-v-df275b96="" tag="生日" va-para="BirthDay" type="date" class="va131" name="BirthDay"  value="{$data.BirthDay}">
           </em></div>
       </li>
     </ul>
