--- a/tp-admin-master/app/www/view/index/index.html
+++ b/tp-admin-master/app/www/view/index/index.html
@@ -38,11 +38,11 @@
     <div data-v-1e27fdbb="" id="banner">
       <div class="swiper-container swiper-container-horizontal" data-v-1e27fdbb="">
         <div class="swiper-wrapper">
-          <div class="swiper-slide" data-v-1e27fdbb="" style="width: 100%;"><a href="javascript:;" class="" data-v-1e27fdbb=""><img data-v-1e27fdbb="" width="100%" src="__IMG__/1.jpg"></a> </div>          
+          <div class="swiper-slide" data-v-1e27fdbb="" style="width: 100%;"><a href="javascript:;" class="" data-v-1e27fdbb=""><img data-v-1e27fdbb="" width="100%" src="__IMG__/banner1.png"></a> </div>          
         </div>
       </div>
     </div>
-    <div data-v-1e27fdbb="" id="notice"><a href="{:url('www/activity/noticedetail')}" class="active" data-v-1e27fdbb=""><i data-v-1e27fdbb="" class="iconfont gonggao fl"></i><span data-v-1e27fdbb="">好消息，流水满50000送IPHONE PLUS一部</span><i data-v-1e27fdbb="" class="iconfont right fr"></i></a><a href="/NoticeDetail?ID=1919" class="active" data-v-1e27fdbb=""><i data-v-1e27fdbb="" class="iconfont gonggao fl"></i><span data-v-1e27fdbb="">好消息，流水满50000送IPHONE PLUS一部</span><i data-v-1e27fdbb="" class="iconfont right fr"></i></a> </div>
+    <div data-v-1e27fdbb="" id="notice"><a href="{:url('www/activity/noticedetail')}" class="active" data-v-1e27fdbb=""><i data-v-1e27fdbb="" class="iconfont gonggao fl"></i><span data-v-1e27fdbb="">【银行转账何明春更换通知】</span><i data-v-1e27fdbb="" class="iconfont right fr"></i></a><a href="/NoticeDetail?ID=1919" class="active" data-v-1e27fdbb=""><i data-v-1e27fdbb="" class="iconfont gonggao fl"></i><span data-v-1e27fdbb="">重要通知【微信充值方式更换通知】</span><i data-v-1e27fdbb="" class="iconfont right fr"></i></a> </div>
     <div data-v-1e27fdbb="" class="hr1px"></div>
     <div data-v-1e27fdbb="" id="HotLottery" style="height: 20em;">
       <ul data-v-1e27fdbb="">
