--- a/tp-admin-master/app/www/view/activity/noticedetail.html
+++ b/tp-admin-master/app/www/view/activity/noticedetail.html
@@ -41,13 +41,13 @@
     </a></nav>
   <div data-v-05c33b10="" class="main" s="[object Object]">
     <article data-v-05c33b10="">
-      <h2 data-v-05c33b10="">好消息，流水满50000送iphone PLUS 6</h2>
-      <time data-v-05c33b10="">2017-12-01 08:18:10</time>
+      <h2 data-v-05c33b10="">重要通知【微信充值方式更换通知】</h2>
+      <time data-v-05c33b10="">2017-09-26 16:37:10</time>
       <!---->
       <p data-v-05c33b10="" class="hr1px"></p>
       <div data-v-05c33b10="" class="wrapExplain">
         <p>尊敬的会员，您好：</p>
-        <p style='line-height:1.8em;margin-top:10px;'>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;年底来袭，为庆祝新老用户对本站的支持，凡在本站消费流水达50000，可添加客服QQ：3044759075，领取IPHONE PLUS 6 一部，【天天彩票】祝您游戏愉快，盈利多多哦~</p>
+        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;微信支付方式已经更换。添加微信kris816,转账备注天天彩票账户昵称，付款成功后，返回天天彩票网站微信支付，输入您的充值金额以及微信昵称，提交您的订单即可到账哦。【天天彩票】祝您游戏愉快，盈利多多哦~</p>
       </div>
     </article>
   </div>
