--- a/tp-admin-master/app/admin/view/_layout/footer.html
+++ b/tp-admin-master/app/admin/view/_layout/footer.html
@@ -1,9 +1,9 @@
 <div class="footer">
     <div class="pull-right">
-        Perfectly designed,Simplicity,Useful,Free.
+       Free.
     </div>
     <div>
-        <strong>Copyright</strong> <a href="https://github.com/Astonep">Red-Team</a> &copy; 2016
+       2018
     </div>
 </div>
 </div>
