--- a/tp-admin-master/app/admin/view/_layout/sidebar.html
+++ b/tp-admin-master/app/admin/view/_layout/sidebar.html
@@ -14,15 +14,14 @@
         <!-- 菜单列表 -->
         <!-- 一级菜单 -->
         <li>
-            <a href="{:url('admin/index/index')}"><i class="fa fa-th-large"></i> <span class="nav-label">{$Think.lang.Dashboards}</span></a>
+            <a href="{:url('admin/user/index')}"><i class="fa fa-th-large"></i> <span class="nav-label">用户信息</span></a>
         </li>
         <!-- 二级菜单 -->
         <li>
-            <a href="#"><i class="fa fa-cog"></i> <span class="nav-label">{$Think.lang.SystemManage}</span><span class="fa arrow"></span></a>
+            <a href="#"><i class="fa fa-cog"></i> <span class="nav-label">彩票管理</span><span class="fa arrow"></span></a>
             <ul class="nav nav-second-level collapse">
-                <li class=""><a href="{:url('admin/user/index')}">{$Think.lang.UserManage}</a></li>
-                <li><a href="{:url('admin/role/index')}">{$Think.lang.RoleManage}</a></li>
-                <li><a href="{:url('admin/authrule/index')}">{$Think.lang.AuthManage}</a></li>
+                <li class=""><a href="{:url('admin/index/recharge')}">充值信息</a></li>
+                <li><a href="{:url('admin/index/tixian')}">提现信息</a></li>                
             </ul>
         </li>
        
