--- a/tp-admin-master/app/www/view/usercenter/betrecord.html
+++ b/tp-admin-master/app/www/view/usercenter/betrecord.html
@@ -57,10 +57,11 @@
             <!--判断是否有记录-->
             {notempty name="data"}
           <ul>
-            <li>投注时间</li>
+            <li>投注时间</li>            
             <li>投注类型</li>
             <li>投注号码</li>
             <li>投注钱数</li>
+            <li class='red'>开奖号码</li>
             <li>中奖金额</li>
           </ul>
             <!--循环列表-->
@@ -70,6 +71,7 @@
             <li>{$vo.lotteryname}</li>
             <li>{$vo.lottery_number}</li>
             <li>{$vo.bettingmoney}元</li>
+            <li class='red'>{$vo.bettingmoney}</li>
             <li>{$vo.winningmoney}元</li>
           </ul>
             {/volist}
@@ -97,6 +99,7 @@
             <li>投注类型</li>
             <li>投注号码</li>
             <li>投注钱数</li>
+            <li class='red'>开奖号码</li>
             <li>中奖状态</li>
           </ul>
             <!--循环列表-->
@@ -106,6 +109,7 @@
             <li>{$voa.lotteryname}</li>
             <li>{$voa.lottery_number}</li>
             <li>{$voa.bettingmoney}元</li>
+            <li class='red'>{$voa.bettingmoney}</li>
             <li>{$voa.winningmoney}元</li>
           </ul>
             {/volist}
@@ -131,6 +135,7 @@
             <li>投注类型</li>
             <li>投注号码</li>
             <li>投注钱数</li>
+            <li class='red'>开奖号码</li>
             <li>中奖状态</li>
           </ul>
              <!--循环列表-->
@@ -140,6 +145,7 @@
             <li>{$vob.lotteryname}</li>
             <li>{$vob.lottery_number}</li>
             <li>{$vob.bettingmoney}元</li>
+            <li class='red'>{$vob.bettingmoney}</li>
             <li>{$vob.winningmoney}元</li>
           </ul>
             {/volist}         
@@ -165,6 +171,7 @@
             <li>投注类型</li>
             <li>投注号码</li>
             <li>投注钱数</li>
+            <li class='red'>开奖号码</li>
             <li>中奖状态</li>
           </ul>
              <!--循环列表-->
@@ -174,6 +181,7 @@
             <li>{$voc.lotteryname}</li>
             <li>{$voc.lottery_number}</li>
             <li>{$voc.bettingmoney}元</li>
+            <li class='red'>未开奖</li>
             <li>{$voc.winningmoney}元</li>
           </ul>
             {/volist}         
