--- a/tp-admin-master/app/www/view/usercenter/billrecord.html
+++ b/tp-admin-master/app/www/view/usercenter/billrecord.html
@@ -54,7 +54,7 @@
       </div>
       <div data-v-1558f0ab="" class="bd dontSelect">
         <!-- 所有类型 -->
-        <div data-v-1558f0ab="" class="scrollBox">  
+        <div data-v-1558f0ab="" class="scrollBox2">  
             <!--判断是否有记录-->
             {notempty name="all"}
             <ul>
@@ -94,7 +94,7 @@
         
         
         <!-- 提现记录 -->
-        <div data-v-1558f0ab="" class="scrollBox ds">
+        <div data-v-1558f0ab="" class="scrollBox2 ds">
             <!--判断是否有记录-->
             {notempty name="Tixian"}
             <ul>
@@ -129,7 +129,7 @@
         </div>
         <!-- 提现记录 -->
         <!-- 充值记录 -->
-        <div data-v-1558f0ab="" class="scrollBox ds">
+        <div data-v-1558f0ab="" class="scrollBox2 ds">
             <!--判断是否有记录-->
             {notempty name="Tixian"}
             <ul>
