--- a/tp-admin-master/app/www/view/usercenter/setbankcard.html
+++ b/tp-admin-master/app/www/view/usercenter/setbankcard.html
@@ -99,6 +99,9 @@ $(function(){
       </tbody>
     </table>
     <div data-v-37e217f7="" class="loginBtn BTN"><a data-v-37e217f7="">确定</a></div>
+    <div data-v-06ff19ac="" class="tips"> 
+        请核对无误在提交，如修改银行卡信息，请联系客服：QQ:3044759075
+    </div>
   </div>
 </div>
 </body>
