后台删除确认功能

--- a/tp-admin-master/app/admin/view/_layout/sidebar.html
+++ b/tp-admin-master/app/admin/view/_layout/sidebar.html
@@ -20,7 +20,7 @@
         <li>
             <a href="#"><i class="fa fa-cog"></i> <span class="nav-label">彩票管理</span><span class="fa arrow"></span></a>
             <ul class="nav nav-second-level collapse">
-                <li class=""><a href="{:url('admin/index/recharge')}">充值信息</a></li>
+                <li class=""><a href="{:url('admin/recharge/recharge')}">充值信息</a></li>
                 <li><a href="{:url('admin/index/tixian')}">提现信息</a></li>                
             </ul>
         </li>
