--- a/tp-admin-master/app/www/view/usercenter/wechat.html
+++ b/tp-admin-master/app/www/view/usercenter/wechat.html
@@ -69,15 +69,22 @@ alert("已复制好，可贴粘。");
         <tr data-v-06ff19ac="">
           <td data-v-06ff19ac="">微信昵称</td>
           <td data-v-06ff19ac=""><input data-v-06ff19ac="" type="text" tag="微信昵称" placeholder="请输入您的微信昵称" class="va78" name="PayUser"></td>
+        </tr>        
+        <tr data-v-06ff19ac="">
+          <td data-v-06ff19ac="">二维码</td>
+          <td data-v-06ff19ac=""><img data-v-1e27fdbb="" width="40%" src="__IMG__/code.jpg" style='margin-top:3px;'></td>
         </tr>
         <tr data-v-06ff19ac=""></tr>
       </table>
       <div data-v-06ff19ac="" class="loginBtn BTN"><a data-v-06ff19ac="">确定</a></div>
-      <div data-v-06ff19ac="" class="tips"> 1、添加收款微信kris816,进行充值。<br data-v-06ff19ac="">
-        2、请正确填写您的昵称和充值金额。<br data-v-06ff19ac="">
-        3、微信昵称并非微信账号，请注意区分。<br data-v-06ff19ac="">
-        4、转账时，请在留言中备注自己的游戏账号，便于及时确认充值金额。<br data-v-06ff19ac="">
-        5、请务必转账后再提交订单，否则无法及时查到您的款项！ </div>
+      <div data-v-06ff19ac="" class="tips"> 1、请转账到以上微信或扫码支付。<br data-v-06ff19ac="">
+        2、打开微信扫一扫右上角相册。<br />
+        3、选择刚才保存的二维码。<br />
+        4、输入金额<br />
+        5、请正确填写您的昵称和充值金额。<br data-v-06ff19ac="">
+        6、微信昵称并非微信账号，请注意区分。<br data-v-06ff19ac="">
+        7、转账时，请在留言中备注自己的游戏账号，便于及时确认充值金额。<br data-v-06ff19ac="">
+        8、请务必转账后再提交订单，否则无法及时查到您的款项！ </div>
     </div>
   </div>
 </div>
