--- a/tp-admin-master/public/static/www/css/login.css
+++ b/tp-admin-master/public/static/www/css/login.css
@@ -33245,7 +33245,7 @@ em[data-v-a2fe7c9c], i[data-v-a2fe7c9c] {
 }
 .nochange[data-v-c96ca35c]:active {
 	background: #fff;
-	color: #eb0002
+	color: #eb0002;
 }
 .qq{padding-top:20px;height: 80px; font-size: 14px;}
 .ds{display:none;}
