--- a/tp-admin-master/app/www/view/usercenter/alipay.html
+++ b/tp-admin-master/app/www/view/usercenter/alipay.html
@@ -63,7 +63,7 @@ alert("已复制好，可贴粘。");
         </tr>
         <tr data-v-06ff19ac="">
           <td data-v-06ff19ac="">支付宝账号</td>
-          <td data-v-06ff19ac=""><input data-v-06ff19ac="" type="text" readonly class="cGold" value="kris816">
+          <td data-v-06ff19ac=""><input data-v-06ff19ac="" type="text" readonly class="cGold" value="kris816@126.com">
             <i data-v-06ff19ac="" class="iconfont copy">复制</i></td>
         </tr>
         <tr data-v-06ff19ac="">
@@ -76,17 +76,16 @@ alert("已复制好，可贴粘。");
         </tr>
         <tr data-v-06ff19ac="">
           <td data-v-06ff19ac="">扫码支付</td>
-          <td data-v-06ff19ac=""><img data-v-06ff19ac="" alt="" class="barcode" src="http://imagess-google.com/yfcp/UploadImages/20171125053936421438.png"></td>
+          <td data-v-06ff19ac=""><img data-v-1e27fdbb="" width="40%" src="__IMG__/code2.jpg" style='margin-top:3px;'></td>
         </tr>
         <tr data-v-06ff19ac=""></tr>
       </table>
       <div data-v-06ff19ac="" class="loginBtn BTN"><a data-v-06ff19ac="">确定</a></div>
       <div data-v-06ff19ac="" class="tips"> 1、请转账到以上支付宝或扫码支付。<br data-v-06ff19ac="">
-        2、若提供的是银行账号，请使用支付宝转账到银行卡的方式进行转账。<br data-v-06ff19ac="">
-        3、请正确填写您的姓名和充值金额。<br data-v-06ff19ac="">
-        4、设置了支付宝昵称的请直接填写昵称。<br data-v-06ff19ac="">
-        5、转账1笔提交1次，请勿重复提交订单。<br data-v-06ff19ac="">
-        6、请务必转账后再提交订单,否则无法及时查到您的款项！ </div>
+        2、请正确填写您的姓名和充值金额。<br data-v-06ff19ac="">
+        3、设置了支付宝昵称的请直接填写昵称。<br data-v-06ff19ac="">
+        4、转账1笔提交1次，请勿重复提交订单。<br data-v-06ff19ac="">
+        5、请务必转账后再提交订单,否则无法及时查到您的款项！ </div>
     </div>
     <!----></div>
   <!----></div>
