增加中奖号码

--- a/tp-admin-master/app/www/view/usercenter/betrecord.html
+++ b/tp-admin-master/app/www/view/usercenter/betrecord.html
@@ -61,6 +61,7 @@
             <li>投注类型</li>
             <li>投注号码</li>
             <li>投注钱数</li>
+            <li>开奖号码数</li>
             <li>中奖金额</li>
           </ul>
             <!--循环列表-->
@@ -70,6 +71,7 @@
             <li>{$vo.lotteryname}</li>
             <li>{$vo.lottery_number}</li>
             <li>{$vo.bettingmoney}元</li>
+            <li>{$vo.lotterynumbers}</li>
             <li>{$vo.winningmoney}元</li>
           </ul>
             {/volist}
