--- a/tp-admin-master/app/admin/view/recharge/recharge.html
+++ b/tp-admin-master/app/admin/view/recharge/recharge.html
@@ -22,17 +22,14 @@
                         
                     {/toolbar}
                     <!-- 表格数据 -->
-                    <table id="table" data-toggle="gridview" class="table" data-url="{:url('admin/index/gettixian')}" data-toolbar="#toolbar" data-show-columns="true" data-page-size="10" data-page-list="[10, 25, 50, All]" data-unique-id="id" data-pagination="true" data-side-pagination="client" data-search="true" data-click-to-select="false">
+                    <table id="table" data-toggle="gridview" class="table" data-url="{:url('admin/recharge/getrecharge')}" data-toolbar="#toolbar" data-show-columns="true" data-page-size="10" data-page-list="[10, 25, 50, All]" data-unique-id="id" data-pagination="true" data-side-pagination="client" data-search="true" data-click-to-select="false">
                         <thead>
                             <tr>                                 
                                 <th data-width="50" data-field="username" >用户名</th>
-                                <th data-width="80" data-field="balance" data-align="center">余额</th>
-                                <th data-width="80" data-field="Money" data-align="center">提现金额</th>
-                                <th data-width="80" data-field="BankID" data-align="center">银行</th>
-                                <th data-width="80" data-field="RealName" data-align="center">开户人姓名</th>
-                                <th data-width="80" data-field="BankNum" data-align="center">银行卡号</th>
-                                <th data-width="80" data-field="Address_P" data-align="center">开户省</th>
-                                <th data-width="80" data-field="Address_C" data-align="center">开户市</th>   
+                                <th data-width="80" data-field="Rebate" data-align="center">返点</th>
+                                <th data-width="80" data-field="Money" data-align="center">充值金额</th>
+                                <th data-width="80" data-field="PayUser" data-align="center">姓名</th>
+                                <th data-width="80" data-field="playtype" data-align="center">充值渠道</th>        
                                 <th data-width="80" data-field="operate"   data-align="center" data-formatter="operateFormatter" data-events="operateEvents">{:lang('Operate')}</th>
                      
                             </tr>
@@ -59,7 +56,7 @@
     var operateEvents = {
         'click .edit': function (e, value, row, index) {
             var param = {
-                url: "{:url('admin/index/edittixian');}",
+                url: "{:url('admin/recharge/editrecharge');}",
                 data: {id: row.id}
             }
             $("#table").gridView('loadModal', param.url,param.data)
