--- a/tp-admin-master/app/admin/view/user/index.html
+++ b/tp-admin-master/app/admin/view/user/index.html
@@ -27,7 +27,14 @@
                             <tr>
                                 <th data-width="10" data-align="center" data-checkbox="true"></th>
                                 <th data-width="50" data-field="username" >{:lang('Account')}</th>
+                                <th data-width="50" data-field="nickname" >昵称</th>
+                                <th data-width="50" data-field="balance" >余额</th>
+                                <th data-width="50" data-field="Gender" >性别</th>
                                 <th data-width="80" data-field="mobile" data-align="center">{:lang('Mobile')}</th>
+                                <th data-width="50" data-field="email" >邮箱</th>
+                                <th data-width="50" data-field="BirthDay" >生日</th>
+                                <th data-width="50" data-field="head_pic" >头像</th>
+                                
                                 <th data-width="50" data-field="status" >{:lang('Status')}</th>
                                 <th data-width="80" data-field="create_time" data-align="center">{:lang('Create Time')}</th>
                                 <th data-width="80" data-field="operate"   data-align="center" data-formatter="operateFormatter" data-events="operateEvents">{:lang('Operate')}</th>
@@ -43,9 +50,7 @@
 <script type="text/javascript">
     function operateFormatter(value, row, index) {
         return [
-            '<a class="btn btn-xs edit" href="javascript:void(0)" title="{$Think.lang.Edit}">',
-            '<i class="fa fa-edit"></i>',
-            '</a>  ',
+            
             '<a class="btn btn-xs delete" href="javascript:void(0)" title="{$Think.lang.Delete}">',
             '<i class="fa fa-trash"></i>',
             '</a>'
