--- a/tp-admin-master/app/www/view/usercenter/betrecord.html
+++ b/tp-admin-master/app/www/view/usercenter/betrecord.html
@@ -57,11 +57,11 @@
             <!--判断是否有记录-->
             {notempty name="data"}
           <ul>
-            <li>投注时间</li>            
+            <li>投注时间</li>
             <li>投注类型</li>
             <li>投注号码</li>
             <li>投注钱数</li>
-            <li class='red'>开奖号码</li>
+            <li>开奖号码数</li>
             <li>中奖金额</li>
           </ul>
             <!--循环列表-->
@@ -71,7 +71,7 @@
             <li>{$vo.lotteryname}</li>
             <li>{$vo.lottery_number}</li>
             <li>{$vo.bettingmoney}元</li>
-            <li class='red'>{$vo.bettingmoney}</li>
+            <li>{$vo.lotterynumbers}</li>
             <li>{$vo.winningmoney}元</li>
           </ul>
             {/volist}
@@ -99,7 +99,6 @@
             <li>投注类型</li>
             <li>投注号码</li>
             <li>投注钱数</li>
-            <li class='red'>开奖号码</li>
             <li>中奖状态</li>
           </ul>
             <!--循环列表-->
@@ -109,7 +108,6 @@
             <li>{$voa.lotteryname}</li>
             <li>{$voa.lottery_number}</li>
             <li>{$voa.bettingmoney}元</li>
-            <li class='red'>{$voa.bettingmoney}</li>
             <li>{$voa.winningmoney}元</li>
           </ul>
             {/volist}
@@ -135,7 +133,6 @@
             <li>投注类型</li>
             <li>投注号码</li>
             <li>投注钱数</li>
-            <li class='red'>开奖号码</li>
             <li>中奖状态</li>
           </ul>
              <!--循环列表-->
@@ -145,7 +142,6 @@
             <li>{$vob.lotteryname}</li>
             <li>{$vob.lottery_number}</li>
             <li>{$vob.bettingmoney}元</li>
-            <li class='red'>{$vob.bettingmoney}</li>
             <li>{$vob.winningmoney}元</li>
           </ul>
             {/volist}         
@@ -171,7 +167,6 @@
             <li>投注类型</li>
             <li>投注号码</li>
             <li>投注钱数</li>
-            <li class='red'>开奖号码</li>
             <li>中奖状态</li>
           </ul>
              <!--循环列表-->
@@ -181,7 +176,6 @@
             <li>{$voc.lotteryname}</li>
             <li>{$voc.lottery_number}</li>
             <li>{$voc.bettingmoney}元</li>
-            <li class='red'>未开奖</li>
             <li>{$voc.winningmoney}元</li>
           </ul>
             {/volist}         
