后台增加余额，充值总额，提现总额，中奖总额

--- a/tp-admin-master/app/www/view/login/forgetpwd.html
+++ b/tp-admin-master/app/www/view/login/forgetpwd.html
@@ -48,7 +48,7 @@
         <tr data-v-f9a5290e=""></tr>
       </tbody>
     </table>
-    <div data-v-f9a5290e="" class="loginBtn BTN"><a data-v-f9a5290e="" href='ModifyPwd.html'>确定</a></div>
+    <div data-v-f9a5290e="" class="loginBtn BTN"><a data-v-f9a5290e="" href="{:url('www/login/ModifyPwd')}">确定</a></div>
   </div>
 </div>
     <script type="text/javascript">
