--- a/tp-admin-master/app/admin/view/user/index.html
+++ b/tp-admin-master/app/admin/view/user/index.html
@@ -28,7 +28,11 @@
                                 <th data-width="10" data-align="center" data-checkbox="true"></th>
                                 <th data-width="50" data-field="username" >{:lang('Account')}</th>
                                 <th data-width="50" data-field="nickname" >昵称</th>
-                                <th data-width="50" data-field="balance" >余额</th>
+                                
+                                <th data-width="50" data-field="allrecharge" >充值总额</th>
+                                <th data-width="50" data-field="allwinning" >中奖总额</th>
+                                <th data-width="50" data-field="alltixian" >提现总额</th>
+                                 <th data-width="50" data-field="balance" >余额</th> 
                                 <th data-width="50" data-field="Gender" >性别</th>
                                 <th data-width="80" data-field="mobile" data-align="center">{:lang('Mobile')}</th>
                                 <th data-width="50" data-field="email" >邮箱</th>
